2002-01-15  Bruno Haible  <bruno@clisp.org>

	* gettextize.in: Handle po/Makevars specially, don't overwrite the
	previous customizations.

2002-01-12  Bruno Haible  <bruno@clisp.org>

	* gettextize.in: Update year in --version output.

2002-01-10  Bruno Haible  <bruno@clisp.org>

	* po-mode.el (po-content-type-charset-alist): Add Emacs20/21 codepages.

2001-11-20  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-ediff-buffers-exit-recursive): Kill ediff buffers
	after quitting the ediff session.

2002-01-03  Bruno Haible  <bruno@clisp.org>

	* gettextize.in: Recommend installation of gettext.h.

2001-12-15  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-eval-requoted): Add \r to avoid additional quoting
	during edit.  Reported by Santiago Vila.

2001-12-06  Bruno Haible  <bruno@clisp.org>

	* gettextize.in: Install config.rpath in the directory specified
	through AC_CONFIG_AUX_DIR, not necessarily in the toplevel dir.

2001-12-02  Bruno Haible  <bruno@clisp.org>

	* gettextize.in: Also copy config.rpath, and recommend to copy
	lib-ld.m4, lib-link.m4, lib-prefix.m4.

2001-11-25  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-guess-archive-name): Verify that versions provided by
	file name and by Project-Id-Version field match.

2001-11-18  Bruno Haible  <haible@clisp.cons.org>

	* gettextize.in: New option --intl.
	(intldir): New variable.
	Don't populate intl subdirectory if --intl is omitted.

2001-11-19  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-ediff-quit): New function.
	(ediff-keymap-setup-hook): Assign key binding for 'po-ediff-quit'.
	(po-ediff-buffers-exit-recursive): New function, in part derived
	from 'po-subedit-ediff'.
	(po-subedit-ediff): Use it.

	* po-mode.el (po-subedit-ediff): Use meaningful buffer names,
	derived from 'marker-regex'.
	Cleanup: Follow docstring conventions.

2001-11-19  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-mode-map): Enable key binding for
	'po-edit-comment-and-ediff' ('C-c C-c' and 'C-c C-#').
